Lots of Sonar cleanup
Closes #1011